# Protein_Analysis_MD

./: .gitignore  AUDIT.md  CHANGELOG.md  CITATION.cff  DEVELOPMENT_PLAN.md  NOTICE.md  README.md  REPO_CHECK.md  THIRD_PARTY_LICENSES.md  environment.yml  pyproject.toml  run_simulation.py
.github/workflows/: ci.yml
configs/: chymotrypsin_human_50rep_100ns.yaml  chymotrypsin_human_wt_25rep_400ns.yaml  example_cleavage.yaml  example_cleavage_enzyme.yaml  example_cleavage_manual.yaml  example_cleavage_poisson.yaml  example_multi_protein.yaml  example_phase_separation.yaml  example_ptm_scan.yaml  example_single_idr.yaml  flk_smoke.yaml
data/enzymes/: README.md
data/ptm_sites/: README.md
data/residues/: README.md
data/sequences/: README.md
docs/: architecture.md  cleavage_models.md  config_architecture.md  config_quickstart.md  decomposition.md  enzyme_rules.md  equilibration_diagnostics.md  flk_smoke_run.md  free_energy_landscapes.md  heatmaps.md  license_notes.md  limitations.md  parameter_reference.md  phase_separation.md  phase_separation_plots.md  poisson_cleavage.md  presets.md  ptm_input_files.md  python_recipes.md  release_v0.1.0.md  resume_and_cache.md  scientific_scope.md  smoothing.md  staged_temporal_cleavage.md  sweeps.md  uniprot_sequence_fetching.md  units.md  visualization_gallery.md  wizard.md
recipes/: flk_smoke.py
src/idrptm/: __init__.py  bundle.py  calvados_adapter.py  cleavage.py  cli.py  configuration.py  dashboard.py  design.py  environment.py  environment_check.py  enzymes.py  finalize.py  hpc.py  local_pipeline.py  presets.py  project.py  provenance.py  ptm.py  recipe.py  registry.py  repo_check.py  residue_params.py  runner.py  schema.py  sequence.py  sequence_features.py  storage.py  uniprot.py  units.py  watch.py
src/idrptm/analysis/: __init__.py  _validation.py  cleavage.py  compare.py  contacts.py  decomposition.py  energy.py  equilibration.py  free_energy.py  io.py  lifetime.py  msd.py  multichain.py  phase.py  pipeline.py  ps.py  ree.py  rg.py  scaling.py  sequence_features.py  smoothing.py
src/idrptm/plotting/: __init__.py  plots.py  report.py
src/idrptm/utils/: __init__.py  logging.py  metadata.py  paths.py  tables.py
src/idrptm/visualization/: __init__.py  cleavage.py  decomposition.py  free_energy.py  heatmaps.py  phase.py  ptm.py  pymol.py  sequence_tracks.py  single_chain.py  smoothing_policy.py
src/protein_analysis_md/: __init__.py  bundle.py  calvados_adapter.py  cleavage.py  cli.py  configuration.py  dashboard.py  design.py  environment_check.py  enzymes.py  finalize.py  presets.py  ptm.py  recipe.py  repo_check.py  residue_params.py  runner.py  schema.py  sequence.py  storage.py  uniprot.py  units.py  watch.py
src/protein_analysis_md/analysis/: __init__.py  cleavage.py  compare.py  contacts.py  decomposition.py  energy.py  equilibration.py  (+13 more)
tests/: test_analysis_core.py  test_analysis_io_pipeline.py  test_cleavage.py  test_cli.py  test_compare_report.py  test_config_compile.py  test_decomposition.py  test_design.py  test_environment_check.py  test_equilibration_project.py  test_free_energy.py  test_imports.py  test_local_pipeline.py  test_multi_protein.py  test_prepare.py  test_ptm.py  test_pymol_export.py  test_recipe.py  test_residue_params.py  test_runner.py  test_sequence.py  test_simulation_config.py  test_smoothing.py  test_smoothing_policy.py  test_storage.py  test_uniprot_mock.py  test_visualization_cleavage.py  test_visualization_phase.py  test_visualization_ptm.py  test_visualization_single_chain.py  test_watch_pack.py
(+19 files in other folders)
