[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idr-ptm-md"
version = "0.1.0"
description = "Research workflow framework for sequence- and PTM-dependent CALVADOS coarse-grained MD."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
authors = [
  { name = "idr-ptm-md contributors" }
]
keywords = [
  "CALVADOS",
  "coarse-grained molecular dynamics",
  "intrinsically disordered proteins",
  "post-translational modifications",
  "phosphorylation",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "matplotlib",
  "pydantic>=2",
  "typer",
  "pyyaml",
  "mdtraj",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[project.scripts]
idrptm = "idrptm.cli:main"
idr-ptm-md = "idrptm.cli:main"

[project.urls]
Repository = "https://github.com/idromptm/idr-ptm-md"
Backend = "https://github.com/KULL-Centre/CALVADOS"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
idrptm = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
