[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protein-analysis-md"
version = "0.1.0"
description = "CALVADOS-backed coarse-grained protein/IDR MD workflow framework."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-only" }
authors = [
  { name = "protein_analysis_md contributors" }
]
keywords = [
  "CALVADOS",
  "coarse-grained molecular dynamics",
  "intrinsically disordered proteins",
  "post-translational modifications",
  "phosphorylation",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "matplotlib",
  "pydantic>=2",
  "typer",
  "pyyaml",
  "requests",
  "mdtraj",
  "pyarrow",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[project.scripts]
pamd = "protein_analysis_md.cli:main"
protein_analysis_md = "protein_analysis_md.cli:main"
idrptm = "idrptm.cli:main"
idr-ptm-md = "idrptm.cli:main"

[project.urls]
Repository = "https://github.com/idromptm/protein_analysis_md"
Backend = "https://github.com/KULL-Centre/CALVADOS"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
idrptm = ["py.typed"]
protein_analysis_md = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
